--- a/public/inner_pages/page-services.html
+++ b/public/inner_pages/page-services.html
@@ -129,149 +129,93 @@
     <main>
 
 
-        <!-- start tc-services-style24 -->
-        <section class="tc-services-style24">
+        <section class="tc-services-style3">
             <div class="container">
-                <div class="section-title section-title-style24 text-center mb-50 wow fadeInUp">
-                    <h6> <img src="../assets/img/hr.png" alt="" class="icon-10"> <span class="mx-2"> our
-                            services </span> <img src="../assets/img/hr.png" alt="" class="icon-10"> </h6>
-                    <H2> What We <span> Provide <small class="mirror_1"> Provide </small> <small class="mirror_2">
-                                Provide </small> </span> </H2>
-                </div>
-                <div class="content">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="services-card wow fadeInUp" data-wow-delay="0">
-                                <div class="content">
-                                    <div class="title">
-                                        <div class="icon">
-                                            <img src="assets/img/services_page/services/ico5.svg" alt="">
-                                        </div>
-                                        <h5> STRATEGIC
-                                            RECRUITING
-                                            <!-- <br> & Interface Design  -->
-                                        </h5>
-                                    </div>
-                                    <div class="info">
-                                        <p class="fsz-14 color-777"> Our strategic recruitment services go beyond
-                                            finding talent; we create a strategic advantage for your business. We
-                                            identify, attract, and match top-tier candidates to your unique needs,
-                                            ensuring your team is equipped for success. </p>
-                                        <!-- <a href="#"> Read More </a> -->
-                                    </div>
-                                    <img src="assets/img/services_page/services/ico5.svg" alt="" class="shap">
-                                </div>
+                <div class="services-head">
+                    <div class="section_title3">
+                        <h2> MetanoiaHR <span class="fw-100">isn't your typical advisory firm.</span> </h2>
+                        <div class="d-flex justify-content-between mt-60">
+                            <div>
+
+                                <p class=""> We're your trusted advisors, coaches, and recruitment experts rolled into
+                                    one. </p>
+                                <p class="">With a keen focus on North American businesses, we're dedicated to enhancing
+                                    your operational efficiency and boosting your bottom line.
+                                </p>
                             </div>
+                            <a href="./inner_pages/page-services.html" class="fsz-14 text-uppercase hover-cyan1">see all
+                                services <i class="ti-arrow-top-right"></i> </a>
                         </div>
-                        <div class="col-lg-4">
-                            <div class="services-card wow fadeInUp" data-wow-delay="0.1s">
-                                <div class="content">
-                                    <div class="title">
-                                        <div class="icon">
-                                            <img src="assets/img/services_page/services/ico4.svg" alt="">
-                                        </div>
-                                        <h5> EMPOWERMENT
-                                            COACHING
-                                            <!-- <br> Website Development  -->
-                                        </h5>
-                                    </div>
-                                    <div class="info">
-                                        <p class="fsz-14 color-777"> Elevate your team's performance through our
-                                            empowerment coaching. Our tailored programs inspire and refine skills,
-                                            fostering a workplace culture of excellence. Let us help you unlock the full
-                                            potential of your employees. </p>
-                                        <!-- <a href="#"> Read More </a> -->
-                                    </div>
-                                    <img src="assets/img/services_page/services/ico2.svg" alt="" class="shap">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="services-card wow fadeInUp" data-wow-delay="0.2s">
-                                <div class="content">
-                                    <div class="title">
-                                        <div class="icon">
-                                            <img src="assets/img/services_page/services/ico6.svg" alt="">
-                                        </div>
-                                        <h5> JOB SEEKER
-                                            SUPPORT
-                                            <!-- <br> Design & Development  -->
-                                        </h5>
-                                    </div>
-                                    <div class="info">
-                                        <p class="fsz-14 color-777"> For job seekers, we're not just a service; we're
-                                            your partners in success. Our guidance, preparation, and personalized job
-                                            matching services empower you to find the perfect role and take your career
-                                            to new heights.</p>
-                                        <!-- <a href="#"> Read More </a> -->
-                                    </div>
-                                    <img src="assets/img/services_page/services/ico6.svg" alt="" class="shap">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- <div class="col-lg-4">
-                            <div class="services-card wow fadeInUp" data-wow-delay="0.3s">
-                                <div class="content">
-                                    <div class="title">
-                                        <div class="icon">
-                                            <img src="assets/img/services_page/services/ico4.svg" alt="">
-                                        </div>
-                                        <h5> Interior <br> Kind Of Development </h5>
-                                    </div>
-                                    <div class="info">
-                                        <p class="fsz-14 color-777"> Have more successful conversation & improve your customer support with 24/7. </p>
-                                        <a href="#"> Read More </a>
-                                    </div>
-                                    <img src="assets/img/services_page/services/ico4.svg" alt="" class="shap">
-                                </div>
-                            </div>
-                        </div> -->
-                        <!-- <div class="col-lg-4">
-                            <div class="services-card wow fadeInUp" data-wow-delay="0.4s">
-                                <div class="content">
-                                    <div class="title">
-                                        <div class="icon">
-                                            <img src="assets/img/services_page/services/ico5.svg" alt="">
-                                        </div>
-                                        <h5> Business <br> Consult Solutions </h5>
-                                    </div>
-                                    <div class="info">
-                                        <p class="fsz-14 color-777"> Have more successful conversation & improve your customer support with 24/7. </p>
-                                        <a href="#"> Read More </a>
-                                    </div>
-                                    <img src="assets/img/services_page/services/ico5.svg" alt="" class="shap">
-                                </div>
-                            </div>
-                        </div> -->
-                        <!-- <div class="col-lg-4">
-                            <div class="services-card wow fadeInUp" data-wow-delay="0.5s">
-                                <div class="content">
-                                    <div class="title">
-                                        <div class="icon">
-                                            <img src="assets/img/services_page/services/ico6.svg" alt="">
-                                        </div>
-                                        <h5> 24/7 <br> Online Support </h5>
-                                    </div>
-                                    <div class="info">
-                                        <p class="fsz-14 color-777"> Have more successful conversation & improve your customer support with 24/7. </p>
-                                        <a href="#"> Read More </a>
-                                    </div>
-                                    <img src="assets/img/services_page/services/ico6.svg" alt="" class="shap">
-                                </div>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
-                <div class="text-center mt-50">
-                    <div class="button_su shadow-lg radius-3">
-                        <span class="su_button_circle bg-light1 desplode-circle"></span>
-                        <a href="../page-contact-3.html" class="butn py-2 px-4 button_su_inner bg-fff radius-3">
-                            <span class="button_text_container fsz-14 fw-bold text-capitalize color-000"> <img
-                                    src="../assets/img/hr.png" alt="" class="icon-15 me-2"> Get A Quote </span>
-                        </a>
+                <div class="services-content">
+                    <div class="row gx-lg-5">
+                        <div class="col-lg-4">
+                            <div class="service-card wow fadeInUp slow">
+                                <div class="icon">
+                                    <i class="ion-edit"></i>
+                                </div>
+                                <h4 class="title"> <a href="#" class="hover-cyan1"> STRATEGIC RECRUITING</a>
+                                </h4>
+                                <div class="img">
+                                    <img src="assets/img/services/strategic _recrulting.webp" alt="">
+                                </div>
+                                <div class="text fsz-16 color-666 mt-40">
+                                    We understand the power of having the right talent on your team. Our expert
+                                    recruitment services identify, attract, and match top-tier candidates to your
+                                    company's needs.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="service-card mt-90 wow fadeInUp slow" data-wow-delay="0.1s">
+                                <div class="icon">
+                                    <i class="ion-social-usd"></i>
+                                </div>
+                                <h4 class="title"> <a href="#" class="hover-cyan1"> EMPOWERMENT COACHING </a> </h4>
+                                <div class="img">
+                                    <img src="assets/img/services/empowerment_coaching.webp" alt="">
+                                </div>
+                                <div class="text fsz-16 color-666 mt-40">
+                                    Elevate your team's efficiency and performance through targeted coaching. Our
+                                    tailored programs are designed to inspire, refine skills, and optimize employee
+                                    potential.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="service-card wow fadeInUp slow" data-wow-delay="0.2s">
+                                <div class="icon">
+                                    <i class="ion-podium"></i>
+                                </div>
+                                <h4 class="title"> <a href="#" class="hover-cyan1"> JOB SEEKER SUPPORT </a> </h4>
+                                <div class="img">
+                                    <img src="assets/img/services/job_seeker_support.webp" alt="">
+                                </div>
+
+                                <div class="text fsz-16 color-666 mt-40">
+                                    For job seekers, we're more than a service; we're your partners in success. We offer
+                                    guidance, preparation, and personalized job matching to help you find your perfect
+                                    role. </div>
+                            </div>
+                        </div>
+                        <!-- <div class="col-lg-3">
+                            <div class="service-card mt-150 wow fadeInUp slow" data-wow-delay="0.3s">
+                                <div class="icon">
+                                    <i class="ion-person-stalker"></i>
+                                </div>
+                                <h4 class="title"> <a href="#" class="hover-cyan1"> human resource and manage </a> </h4>
+                                <div class="img">
+                                    <img src="assets/img/services/4.jpeg" alt="">
+                                </div>
+                                <div class="text fsz-16 color-666 mt-40">
+                                    HR Consulting, Law & Legal Consult, Business Manage
+                                </div>
+                            </div>
+                        </div>
+                    </div> -->
                     </div>
                 </div>
-            </div>
         </section>
         <!-- end tc-services-style24 -->
 
