--- a/public/page-blog-3.html
+++ b/public/page-blog-3.html
@@ -128,8 +128,8 @@
                             <i class="ti-world me-2"></i> <span class="text-uppercase"> eng </span>
                         </button>
                         <ul class="dropdownMenu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="#"> arabic </a></li>
-                            <li><a class="dropdown-item" href="#"> frensh </a></li>
+                            
+                            <li><a class="dropdown-item" href="#"> French </a></li>
                         </ul>
                     </div>
                 </div>
