--- a/public/page-contact-3.html
+++ b/public/page-contact-3.html
@@ -104,13 +104,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../public/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="inner_pages/page-services.html">Our Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="inner_pages/page-about.html">About Founder</a>
+                            <a class="nav-link" href="../public/services.html">Services</a>
                         </li>
                         <!-- <li class="nav-item">
                             <a class="nav-link" href="creative-portfolio.html">Portfolio</a>
@@ -128,8 +125,8 @@
                             <i class="ti-world me-2"></i> <span class="text-uppercase"> eng </span>
                         </button>
                         <ul class="dropdownMenu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="#"> arabic </a></li>
-                            <li><a class="dropdown-item" href="#"> frensh </a></li>
+                            
+                            <li><a class="dropdown-item" href="#"> French </a></li>
                         </ul>
                     </div>
                 </div>
@@ -150,7 +147,7 @@
                         <p class="color-999 mt-60"> Give us a chance to serve and bring magic to your brand. </p>
                     </div>
                     <div class="row gx-5">
-                        <div class="col-lg-8">
+                        <div class="col-lg-12">
                             <div class="contact-side">
                                 <form action="contact.php" class="contact-form">
                                     <div class="row">
@@ -222,47 +219,17 @@
                                 </form>
                             </div>
                         </div>
-                        <div class="col-lg-4">
-                            <div class="contact-info mt-5">
-                                <div class="info-card fsz-18">
-                                    <small class="text-uppercase color-999 mb-20 fsz-12"> United States Office </small>
-                                    <a href="#"> 152 Thatcher Road St, Mahattan, 10463, US </a>
-                                    <a href="#"> abdullah@metanoiahr.com </a>
-                                    <a href="#"> (+706) 896-0751 </a>
-                                </div>
-                                <div class="info-card mt-60 fsz-18">
-                                    <small class="text-uppercase color-999 mb-20 fsz-12"> United kingdom office </small>
-                                    <a href="#"> 12 Buckingham Rd, Thornthwaite, HG3 4TY, UK </a>
-                                    <a href="#"> abdullah@metanoiahr.com </a>
-                                    <a href="#"> (+718) 895-5350 </a>
-                                </div>
-                                <div class="social-icons mt-90">
-                                    <a href="#"> <i class="lab la-twitter"></i> </a>
-                                    <a href="#"> <i class="lab la-facebook-f"></i> </a>
-                                    <a href="#"> <i class="lab la-instagram"></i> </a>
-                                    <a href="#"> <i class="lab la-youtube"></i> </a>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!--  end contact  -->
-
-        <div class="map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d206664.41459690564!2d-122.44298895316085!3d37.81967975542325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857d8b28aaed03%3A0x71b415d535759367!2sOakland%2C%20CA%2C%20USA!5e0!3m2!1sen!2seg!4v1666958447048!5m2!1sen!2seg"
-                width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-
     </main>
     <!--End-Contents-->
 
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+            <h5 class="offcanvas-title" id="offcanvasExampleLabel"></h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
