--- a/public/services.html
+++ b/public/services.html
@@ -10,7 +10,7 @@
     <meta name="description" content="MetanoiaHR desc" />
 
     <!-- Title  -->
-    <title>MetanoiaHR</title>
+    <title>Services - MetanoiaHR</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/hr.png" title="Favicon" sizes="16x16" />
@@ -52,9 +52,9 @@
                 <div class="content">
                     <div class="main_links">
                         <ul>
-                            <li> <a href="#" class="main_link"> Home </a> </li>
+                            <li> <a href="index.html" class="main_link"> Home </a> </li>
                             <li class="links_group">
-                                <a href="#0" class="main_link"> Services </a>
+                                <a href="services.html" class="main_link"> Services </a>
                                 <!-- <div class="sub_links_menu">
                                     <ul>
                                         <li> <a href="#">About</a> </li>
@@ -65,7 +65,7 @@
                             </li>
                             <!-- <li> <a href="#" class="main_link"> projects </a> </li> -->
                             <!-- <li> <a href="#" class="main_link"> news </a> </li> -->
-                            <li> <a href="#" class="main_link"> Contact </a> </li>
+                            <li> <a href="page-contact-3.html" class="main_link"> Contact </a> </li>
                         </ul>
                     </div>
                 </div>
@@ -158,10 +158,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Services</a>
+                            <a class="nav-link" href="services.html">Services</a>
                         </li>
                         <!-- <li class="nav-item">
                             <a class="nav-link" href="">Our Partner</a>
@@ -194,172 +194,9 @@
 
     <!--Contents-->
     <main>
-        <!--  start header  -->
-        <header class="tc-header-style3 px-lg-5">
-            <div class="content">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <div class="info wow fadeInUp slow">
-                                <!-- <h5> <img src="assets/img/hr_footer.png" alt="" class="me-2"> MetanoiaHR
-                                    Consult
-                                    Firm</h5> -->
-                                <h1> Welcome <span class="fw-100"> to </span> <span class="fw-100"> MetanoiaHR </span>
-                                </h1>
-                                <div class="text">
-                                    Elevating Your Business through Strategic HR Solutions. </div>
-
-                                <div class="btns">
-                                    <div class="button_su">
-                                        <span class="su_button_circle desplode-circle bg-darkBlue1"></span>
-                                        <a href=""
-                                            class="butn border-1 text-uppercase button_su_inner bg-cyan1">
-                                            <span class="button_text_container text-white fsz-16"> Book An Appointment
-                                                <i class="ti-arrow-top-right ms-1"></i></span>
-                                        </a>
-                                    </div>
-                                    <div class="button_su ms-3">
-                                        <span class="su_button_circle desplode-circle bg-cyan1"></span>
-                                        <a href=""
-                                            class="butn border-1 brd-gray text-uppercase button_su_inner">
-                                            <span class="button_text_container text-white fsz-16"> Our Services <i
-                                                    class="ti-arrow-top-right ms-1"></i></span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <!--  end header  -->
-
-
-        <!--  start numbers  -->
-        <section class="tc-numbers-style3 px-lg-5">
-            <div class="content wow fadeInUp slow">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-lg-4">
-                            <h3> We are proud for <br> <span class="color-cyan1"> the results </span> in the past xxx
-                                years </h3>
-                        </div>
-                        <div class="col-lg-8">
-                            <div class="numbers-content">
-                                <div class="number-card">
-                                    <h2> <span class="counter"> xx </span> K+ </h2>
-                                    <p> Clients and <br> Partners worldwide </p>
-                                </div>
-                                <div class="number-card">
-                                    <h2> <span class="counter"> xx </span> </h2>
-                                    <p> awards winning <br> acquired </p>
-                                </div>
-                                <div class="number-card">
-                                    <h2> <span class="counter"> xx </span> + </h2>
-                                    <p> projects completed in <br> 24 countries </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--  end numbers  -->
-
-
-        <!--  start about  -->
-        <section class="tc-about-style3 overflow-hidden">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="info wow fadeInUp slow">
-                            <div class="section_title3">
-                                <h2> transforming <br> business <span class="fw-100"> to compete </span> <span
-                                        class="fw-100"> for tomorrow </span> </h2>
-                            </div>
-                            <div class="text fsz-18 mt-60 color-666 pe-lg-5 me-lg-5">
-                                At MetanoiaHR, we're not just an HR company – we're your partners in growth. Our mission
-                                is to empower small and medium-sized businesses across North America to unlock their
-                                true potential. By tackling the challenges of human capital management head-on, we help
-                                you pave the way for enhanced productivity, sustained growth, and unparalleled success.
-                            </div>
-                            <div class="btns d-flex align-items-center mt-100">
-                                <div class="button_su">
-                                    <span class="su_button_circle desplode-circle bg-darkBlue1"></span>
-                                    <a href="../public/inner_pages/page-about.html"
-                                        class="butn border-1 text-uppercase button_su_inner bg-cyan1">
-                                        <span class="button_text_container text-white fsz-16"> about our founder <i
-                                                class="ti-arrow-top-right ms-1"></i></span>
-                                    </a>
-                                </div>
-                                <!-- <div class="d-inline-flex align-items-center">
-                                    <div class="button_su ms-3">
-                                        <span class="su_button_circle desplode-circle bg-cyan1"></span>
-                                        <a href="https://youtu.be/pGbIOC83-So?t=21" data-lity=""
-                                            class="icon-60 rounded-circle border brd-gray d-flex align-items-center justify-content-center button_su_inner">
-                                            <span class="button_text_container fsz-20"> <i
-                                                    class="ti-control-play"></i></span>
-                                        </a>
-                                    </div>
-                                    <span class="ms-3 text-uppercase">
-                                        our <br> showreel
-                                    </span>
-                                </div> -->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="img wow zoomIn slow">
-                            <img src="assets/img/about/about3.jpeg" alt="" class="main-img">
-                            <img src="assets/img/about/line_star_shape1.png" alt="" class="shap-img">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--  end about  -->
-
-
         <!--  start features  -->
         <section class="tc-features-style3 float_box_container">
             <div class="content">
-                <div class="tc-features-slider3">
-                    <div class="swiper-container">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <div class="service-card">
-                                    <h2> <a href="#">flexiable Price</a> <img src="assets/img/start_cy.png" alt=""
-                                            class="star"> </h2>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="service-card">
-                                    <h2> <a href="#">top experts</a> <img src="assets/img/start_cy.png" alt=""
-                                            class="star"> </h2>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="service-card">
-                                    <h2> <a href="#">dedicated support</a> <img src="assets/img/start_cy.png" alt=""
-                                            class="star"> </h2>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="service-card">
-                                    <h2> <a href="#">100% Secure</a> <img src="assets/img/start_cy.png" alt=""
-                                            class="star"> </h2>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="service-card">
-                                    <h2> <a href="#">global network</a> <img src="assets/img/start_cy.png" alt=""
-                                            class="star"> </h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="tc-features-slider3" dir="rtl">
                     <div class="swiper-container">
                         <div class="swiper-wrapper">
@@ -650,99 +487,6 @@
             <img src="assets/img/globe1.svg" alt="" class="globe1">
         </section>
         <!--  end testimonials  -->
-
-
-        <!--  start blog  -->
-        <section class="tc-blog-style3">
-            <div class="container">
-                <div class="section_title3 mb-90">
-                    <h2 class="text-white"> we are experts <span class="fw-100"> in the fields </span> </h2>
-                    <div class="d-flex justify-content-between mt-60">
-                        <p class="color-999"> The real experts of the field will provide you with the best strategy to
-                            guide you through your investments. </p>
-                        <a href="#" class="fsz-14 text-uppercase text-white">see all articles <i
-                                class="ti-arrow-top-right"></i> </a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="main-card-blog wow fadeInUp slow">
-                            <div class="img img-cover">
-                                <img src="assets/img/blog/6.jpeg" alt="">
-                            </div>
-                            <div class="info">
-                                <div class="tags-date">
-                                    <a href="#" class="tag-link">
-                                        news
-                                    </a>
-                                    <small> 15 Minutes ago </small>
-                                </div>
-                                <h4 class="title"> <a href="page-single-post-3.html"> Common Difficulites When
-                                        Finalizing Personal Income Tax </a> </h4>
-                                <div class="text">
-                                    MetanoiaHR comes with interactive design tools and features that could leave you
-                                    feeling
-                                    like [...]
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="text-news-card mb-30 wow fadeInUp slow" data-wow-delay="0.1s">
-                            <h5> latest news </h5>
-                            <div class="blog-card">
-                                <div class="tags-date">
-                                    <a href="#" class="tag-link">
-                                        Market
-                                    </a>
-                                    <small> 2 Days ago </small>
-                                </div>
-                                <h3 class="title"> <a href="page-single-post-3.html"> The Stategy in Business: The
-                                        Mindset of Chess </a> </h3>
-                            </div>
-                            <div class="blog-card">
-                                <div class="tags-date">
-                                    <a href="#" class="tag-link">
-                                        news
-                                    </a>
-                                    <small> 14 Hours ago </small>
-                                </div>
-                                <h3 class="title"> <a href="page-single-post-3.html"> How To Optimize Cost for GG Ads?
-                                    </a> </h3>
-                            </div>
-                        </div>
-                        <div class="color-info-news-card wow fadeInUp slow" data-wow-delay="0.2s">
-                            <div class="row gx-0">
-                                <div class="col-lg-6">
-                                    <div class="info-card">
-                                        <div class="tags-date">
-                                            <a href="#" class="tag-link">
-                                                news
-                                            </a>
-                                            <small> 15 Minutes ago </small>
-                                        </div>
-                                        <h4 class="title"> <a href="page-single-post-3.html"> Schengen Visa Consultation
-                                                in 2023 </a> </h4>
-                                        <div class="text">
-                                            Combining these technologies allows users to create digital avatars or
-                                            representations of themselve. [...]
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="img-card">
-                                        <img src="assets/img/blog/7.jpeg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--  end blog  -->
-
-
         <!--  start contact  -->
         <section class="tc-contact-style3 overflow-hidden">
             <div class="container">
@@ -996,22 +740,10 @@
                                     <h5 class="sub-title">company</h5>
                                     <ul class="links">
                                         <li>
-                                            <a href="#">About MetanoiaHR</a>
+                                            <a href="#">About</a>
                                         </li>
                                         <li>
                                             <a href="#">Contact Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Portfolio</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">How We Work</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Career</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Our Team</a>
                                         </li>
                                         <li>
                                             <a href="#">Our Journal</a>
@@ -1021,9 +753,6 @@
                                 <div class="col-lg-3">
                                     <h5 class="sub-title">Links</h5>
                                     <ul class="links">
-                                        <li>
-                                            <a href="#">Help Center</a>
-                                        </li>
                                         <li>
                                             <a href="#">Privacy Policy</a>
                                         </li>
