--- a/public/inner_pages/page-about.html
+++ b/public/inner_pages/page-about.html
@@ -50,61 +50,86 @@
 <body class="page-about inner-pages">
 
     <!-- start navbar -->
-    <nav class="navbar links-navbar navbar-expand-lg navbar-dark style9 px-lg-5 text-white">
-        <div class="container-fluid">
-            <div class="logo-search-side">
-                <a href="../index.html" class="logo-brand">
-                    <img src="../assets/img/hr.png" alt="" class="">
-                </a>
+    <div class="navbar-container bg-darkBlue1">
+        <nav class="navbar top-navbar navbar-expand-lg style3 py-4 border-1 border-bottom brd-gray px-lg-5">
+            <div class="container-fluid align-items-center">
+                <div class="mob-nav-toggles d-flex align-items-center">
+                    <a href="index.html" class="logo-brand d-flex align-items-center">
+                        <img src="assets/img/hr.png" alt="" class="">
+                        <!-- <div class="fsz-14 fw-bold ms-100">
+                            Best WordPress Theme for <br> Business Consulting
+                        </div> -->
+                    </a>
+                </div>
+                <div class="r-side d-lg-flex align-items-center d-none ">
+                    <div class="button_su">
+                        <span class="su_button_circle bg-cyan1"></span>
+                        <a href="#" class="butn border-1 brd-gray pt-10 pb-10 px-4 text-uppercase button_su_inner">
+                            <span class="button_text_container fsz-16">get quote <i
+                                    class="ti-arrow-top-right ms-1"></i></span>
+                        </a>
+                    </div>
+                    <a class="ms-4 fs-3 side_menu_btn d-none d-lg-flex" href="#0">
+                        <i class="las la-grip-lines"></i>
+                    </a>
+                </div>
+            </div>
+        </nav>
+        <nav class="navbar links-navbar navbar-expand-lg navbar-light style3 px-lg-5">
+            <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-            </div>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav m-auto mb-2 mb-lg-0 mt-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../inner_pages/page-about.html">About Founder</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../inner_pages/page-services.html">Our Services</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">News.</a>
-                    </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="../page-contact-3.html">Contact</a>
-                    </li>
-                </ul>
-                <div class="r-side text-lg-end">
-                    <div class="d-inline-flex align-items-center">
-                        <a href="#" class="me-3 fsz-17"> <i class="fal fa-shopping-cart"></i> </a>
-                        <a href="#" class="me-3 fsz-17 search_btn"> <i class="fal fa-search"></i> </a>
-                        <div class="nav-search-box">
-                            <div class="form-group">
-                                <!-- <span class="icon"> <i class="fal fa-search"></i> </span> -->
-                                <input type="text" placeholder="search word">
-                                <button> <i class="fal fa-search"></i> </button>
-                            </div>
-                        </div>
-                        <div class="button_su radius-4">
-                            <span class="su_button_circle bg-000"></span>
-                            <a href="../page-contact-3.html"
-                                class="butn pt-15 pb-15 button_su_inner bg-blue3 m-0 radius-4 lh-1">
-                                <span class="button_text_container fsz-13 fw-bold text-capitalize text-white"> <img
-                                        src="../assets/img/hr.png" alt="" class="icon-20 me-2"> Get Started Now
-                                </span>
-                            </a>
-                        </div>
+                <div class="r-side d-lg-none align-items-center d-flex">
+                    <div class="button_su">
+                        <span class="su_button_circle bg-cyan1"></span>
+                        <a href="#" class="butn border-1 brd-gray pt-10 pb-10 px-4 text-uppercase button_su_inner">
+                            <span class="button_text_container fsz-16">get quote <i
+                                    class="ti-arrow-top-right ms-1"></i></span>
+                        </a>
+                    </div>
+                    <a class="ms-4 fs-3" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                        aria-controls="offcanvasExample">
+                        <i class="las la-grip-lines"></i>
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="inner_pages/page-services.html">Our Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="inner_pages/page-about.html">About Founder</a>
+                        </li>
+                        <!-- <li class="nav-item">
+                            <a class="nav-link" href="creative-portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="page-blog-3.html">News</a>
+                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="page-contact-3.html">Contact</a>
+                        </li>
+                    </ul>
+                    <div class="dropdown lang-btn">
+                        <button class="dropdown-toggle border-0 bg-transparent fsz-16 color-000" type="button"
+                            id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="ti-world me-2"></i> <span class="text-uppercase"> ENG </span>
+                        </button>
+                        <ul class="dropdownMenu" aria-labelledby="dropdownMenuButton1">
+                            
+                            <li><a class="dropdown-item" href="#"> FR </a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
     <!-- end navbar -->
 
     <!-- start header -->
